BJS2-88300 fix minor debug