@@ -1,22 +1,24 @@
 package school.faang.bjs2_88091;
 
+import lombok.NonNull;
+
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 public class ListOperations {
 
     public static Integer sumOfEvenNumbers(List<Integer> numbers) {
-
+        testedOnNullListInt(numbers);
         return numbers.stream()
                 .filter(n -> n % 2 == 0)
                 .reduce(0, Integer::sum);
     }
 
     public static Integer findMax(List<Integer> numbers) {
-
+        testedOnNullListInt(numbers);
         return numbers.stream()
                 .mapToInt(Integer::intValue)
                 .max()
@@ -24,7 +26,7 @@ public class ListOperations {
     }
 
     public static Double findAverage(List<Integer> numbers) {
-
+        testedOnNullListInt(numbers);
         return numbers.stream()
                 .mapToInt(Integer::intValue)
                 .average()
@@ -32,40 +34,35 @@ public class ListOperations {
     }
 
     public static Long countStringsStartingWith(List<String> strings, char c) {
-
+        testedOnNullStringInt(strings);
         return strings.stream()
                 .filter(str -> str.startsWith(String.valueOf(c), 0))
                 .count();
     }
 
     public static List<String> filterStringsContainingSubstring(List<String> strings, String substring) {
-        if (strings == null || substring == null) {
-            throw new IllegalArgumentException("Список и подстрока не могут быть null");
-        }
+        testedOnNullStringInt(strings);
         return strings.stream()
                 .filter(str -> str != null && str.contains(substring))
                 .collect(Collectors.toList());
     }
 
     public static List<String> sortByLength(List<String> strings) {
-        if (strings == null) {
-            throw new IllegalArgumentException("Список не может быть null");
-        }
-
+        testedOnNullStringInt(strings);
         return strings.stream()
-                .sorted(Comparator.comparingInt(String::length))
-                .collect(Collectors.toList());
+                .sorted()
+                .toList();
 
     }
 
     public static boolean allMatchCondition(List<Integer> numbers, Predicate<Integer> predicate) {
-
+        testedOnNullListInt(numbers);
         return numbers.stream()
                 .allMatch(predicate);
     }
 
     public static int findMinGreaterThan(List<Integer> numbers, int num) {
-
+        testedOnNullListInt(numbers);
         return numbers.stream()
                 .filter(n -> n > num)
                 .min(Integer::compare)
@@ -73,8 +70,22 @@ public class ListOperations {
     }
 
     public static List<Integer> convertToLengths(List<String> strings) {
-        return strings.stream().flatMapToInt(str -> IntStream.of(str.length())).boxed().toList();
+        testedOnNullStringInt(strings);
+        return strings.stream()
+                .map(String::length)
+                .toList();
     }
 
+    private static void testedOnNullListInt(List<Integer> list) {
+        if (Objects.isNull(list)) {
+            throw new IllegalArgumentException("Список и подстрока не могут быть null");
+        }
+    }
 
+    private static void testedOnNullStringInt(List<String> list) {
+        if (Objects.isNull(list)) {
+            throw new IllegalArgumentException("Список и подстрока не могут быть null");
+        }
+    }
 }
+
